# billboard_manager

./: .gitignore  Makefile  README.md  app.py  billboard.py  capture-tls.pcapng  client.py  main.py  pyproject.toml  server.py
certs/configs/: bkbillboard.vn.cnf  mimic.cnf  raspi001.ext.cnf  server.ext.cnf
instance/: check_db.py
socket/: client.py  new_client.py  new_server.py  server.py
templates/: index.html  logs.html
test_compression/: test_compress.py
