[project]
name = "billboard-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=44.0.1",
    "websockets>=15.0",
    "flask>=3.1.0",
    "flask_sqlalchemy>=3.1.1",
]

[dependency-groups]
dev = [
    "ruff>=0.9.9",
]
